--- a/Task3/.classpath
+++ b/Task3/.classpath
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-21">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="A:/Github/BlueScope_Training/Task3/lib/commons-collections4-4.1.jar"/>
+	<classpathentry kind="lib" path="A:/Github/BlueScope_Training/Task3/lib/poi-3.17.jar"/>
+	<classpathentry kind="lib" path="A:/Github/BlueScope_Training/Task3/lib/poi-ooxml-3.17.jar"/>
+	<classpathentry kind="lib" path="A:/Github/BlueScope_Training/Task3/lib/poi-ooxml-schemas-3.17.jar"/>
+	<classpathentry kind="lib" path="A:/Github/BlueScope_Training/Task3/lib/xmlbeans-2.6.0.jar"/>
+	<classpathentry kind="lib" path="A:/Github/BlueScope_Training/Task3/lib/mysql-connector-j-9.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
